date range made to be parsed and used from slider value

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <div>
         <label id="year">1914</label>
-        <input id="slider" type="range" min="1914" max="1918" step=".25" value="0" onkeydown="return false;" /><br>
+        <input id="slider" type="range" min="0" max="135387279000" step="4800000" value="0" onkeydown="return false;" /><br>
         <div id="map"></div>
         <script
             src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCQBFaKvUg6ZZ8ukcVWPRTpvTvsPSbOUvE&callback=initMap&libraries=&v=weekly"
