--- a/index.html
+++ b/index.html
@@ -15,16 +15,20 @@
 
 <body>
     <div>
-        <label id="year">1914</label>
-        <input id="slider" type="range" min="0" max="135387279000" step="4800000" value="0" onkeydown="return false;" /><br>
+        <button onclick="week()">Per Week</button><button onclick="month()">Per Month</button><button onclick="threeMonths()">Per Three Months</button>
+        <label id="year">Tue Jul 28 1914 00:00:00 GMT-0025 (Irish Standard Time)</label>
+    <div id="contSlider"><input id="slider" type="range" min="0" max="135397279000" step="86400000" value="0" /></div><br> 
         <div id="map"></div>
+    </div>
         <script
             src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCQBFaKvUg6ZZ8ukcVWPRTpvTvsPSbOUvE&callback=initMap&libraries=&v=weekly"
             defer></script>
         <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
         <script src="https://unpkg.com/@googlemaps/markerclustererplus/dist/index.min.js"></script>
         <script src="assets/js/maps.js"></script>
-    </div>
 </body>
 
 </html>
+<!-- onkeydown="return false;"  -->
+
+<!----> 
