--- a/contact.html
+++ b/contact.html
@@ -15,21 +15,24 @@
     </script>
     <script type="text/javascript">
         (function () {
-            emailjs.init("user_nzOwKjh2fQmNWEKtP16lb");
+            emailjs.init("user_RrCQwlyzE0YrqkCprHCt4");
         })();
     </script>
     <title>Document</title>
 </head>
 
 <body>
-    <form onsubmit="return sendMail(this);">
-        <input type="text" name="name" id="fullname" class="form-control" placeholder="Name" required />
-        <input type="email" name="emailaddress" id="emailaddress" class="form-control" placeholder="Email" required />
-        <textarea style="width: 100%;" rows="5" name="projectfeedback" id="projectfeedback"
-            placeholder="Project Feedback" required></textarea>
-        <button type="submit" class="btn btn-secondary">Send Project Request</button>
-    </form>
-
+    <div class="feedback-container">
+        <h1>Feedback</h1><br>
+        <form onsubmit="return sendMail(this);">
+            <input type="text" name="name" id="fullname" class="form-control" placeholder="Name" required />
+            <input type="email" name="emailaddress" id="emailaddress" class="form-control" placeholder="Email"
+                required />
+            <textarea style="width: 100%;" rows="5" name="projectfeedback" id="projectfeedback"
+                placeholder="Project Feedback" required></textarea>
+            <button type="submit" class="btn btn-secondary">Send Project Request</button>
+        </form>
+    </div>
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script src="https://unpkg.com/@googlemaps/markerclustererplus/dist/index.min.js"></script>
     <script src="assets/js/email.js"></script>
