--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             defer></script>
         <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
         <script src="https://unpkg.com/@googlemaps/markerclustererplus/dist/index.min.js"></script>
+        <script src="assets/js/data.js"></script>
         <script src="assets/js/maps.js"></script>
 </body>
 
