banners added to start and end of slider, and style added to buttons when active or not

--- a/index.html
+++ b/index.html
@@ -14,13 +14,95 @@
 </head>
 
 <body>
-        <script
-            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCQBFaKvUg6ZZ8ukcVWPRTpvTvsPSbOUvE&callback=initMap&libraries=&v=weekly"
-            defer></script>
-        <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-        <script src="https://unpkg.com/@googlemaps/markerclustererplus/dist/index.min.js"></script>
-        <script src="assets/js/data.js"></script>
-        <script src="assets/js/maps.js"></script>
+    <div class="init-page-container">
+        <h1>Two Reasons</h1>
+        <div id="introduction" class="intro">
+            <h2>Introduction</h2>
+            <p><e>40 million people died in WW1 and 60 millon in WW2. Around two thirds of whom were civilians in the case
+                of the latter.</e></p>
+            <p>The two reaons another world war should never take place could simply be the two atomic bombs which were
+                detonated over Japan, however, events of recent years have shown an appetite amongst demagogues for
+                conflict and the potential for global unrest seems to be nausiatingly high. Despite the consequences of
+                such bombs being detonated, some leaders of nations which possess them brandish
+                them boisterously.</p>
+            <div class="ww1 ww">
+                <h2>WW1</h2>
+            </div>
+            <div class="ww2 ww">
+                <h2>WW2</h2>
+            </div>
+            <p><e>6 million Jewish people were murdered in the second world war.</e></p>
+            <hr>
+            <p>University students studying today are less than a third as likely to study history compared to those in the
+                middle of the last century. This regression in appreciation of historical events could be playing a role
+                in peoples current ideological devotions. During the creation of this website I became much more
+                sickened than I had before of the site of a
+                swastika. Incredibly, it is still graffitied on walls. I even questioned using Nazi Germanys flag, which
+                includes the swastika, but felt it necessary for it to be presented in context of the evil which it
+                represents. Studying that period of history brought those events much closer to home and I hope to
+                achieve this in the people that use this website to study the wars.
+            </p>
+            <h4>
+                Click on either globe to have a closer look at World War 1 or World War 2
+            </h4>
+        </div>
+        <div id="key" class="key">
+            <div class="ww1 ww">
+                <h2>WW1</h2>
+            </div>
+            <div class="key-table">
+                <h2>Key</h2>
+                <ul>
+                    <li><img src="/assets/cluster_images/mGround.png"><img src="/assets/cluster_images/mww2Ground.png">
+                        - Ground Warfare</li>
+                    <li><img src="/assets/cluster_images/mAerial.png"><img src="/assets/cluster_images/mww2Aerial.png">
+                        - Aerial Warfare</li>
+                    <li><img src="/assets/cluster_images/mNaval.png"><img src="/assets/cluster_images/mww2Naval.png"> -
+                        Naval Warfare</li>
+                    <li><img src="/assets/cluster_images/mBombing.png"><img
+                            src="/assets/cluster_images/mww2Bombing.png"> - Bombing</li>
+                    <li><img src="/assets/cluster_images/mAerial-Ground-Naval.png"><img
+                            src="/assets/cluster_images/mww2Aerial-Bombing-Ground.png"> - A combination of the above
+                    </li>
+                    <li><img src="/assets/cluster_images/mPolitical.png"> - Political/Non-Military Event</li>
+                </ul>
+                <p>Select the the time period/step size you'd like to use then drag the Airplane above the map to travel
+                    through time! </p>
+            </div>
+            <div class="ww2 ww">
+                <h2>WW2</h2>
+            </div>
+        </div>
+        <a class="contact-link" href="contact.html">
+            <div>Contact</div>
+        </a><br>
+        <div id="buttonsNMap" class="init-map-button-container">
+            <div class="period-button pb1" id="day">Daily</div>
+            <div class="period-button pb2" id="week">Weekly</div>
+            <div class="period-button pb3" id="month">Monthly</div>
+            <div class="period-button pb4 highlighted" id="tmonth">Quarterly</div>
+            <div class="period-button pb5" id="smonth">6 Months</div>
+            <div class="pb6" id="wholeWar">Whole War</div>
+            <div class="start-end-date">
+                <div id="startHeading" class="start-date banner"></div>
+                <div id="endHeading" class="end-date banner"></div>
+            </div><input id="slider" type="range" min="0" max="135397279000" step="7964545823" value="0"
+                onkeydown="return true;" />
+            <div class="maps">
+                <label id="year">1914-07-28</label><br>
+                <div id="map"></div>
+                <div id="overview"></div>
+            </div>
+        </div>
+        <div id="battleInfoBox"></div>
+    </div>
+    <script
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCQBFaKvUg6ZZ8ukcVWPRTpvTvsPSbOUvE&callback=initMap&libraries=&v=weekly"
+        defer></script>
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="https://unpkg.com/@googlemaps/markerclustererplus/dist/index.min.js"></script>
+    <script src="assets/js/data.js"></script>
+    <script src="assets/js/maps.js"></script>
 </body>
 
 </html>
