--- a/contact.html
+++ b/contact.html
@@ -22,6 +22,18 @@
 </head>
 
 <body>
+    <div class="feedback-container" id="feedbackContainer">
+        <h1>Feedback</h1>
+        <a href="index.html" class="main-link">Back to Main</a>
+        <form id="feedbackForm" class="feedback-form" onsubmit="return sendMail(this);">
+            <input type="text" name="name" id="fullname" class="form-control" placeholder="Name" required />
+            <input type="email" name="emailaddress" id="emailaddress" class="form-control" placeholder="Email"
+                required />
+            <textarea style="width: 100%;" rows="5" name="projectfeedback" id="projectFeedback"
+                placeholder="Project Feedback" required></textarea>
+            <button type="submit" class="submit-btn">Send Project Request</button>
+        </form>
+    </div>
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script src="https://unpkg.com/@googlemaps/markerclustererplus/dist/index.min.js"></script>
     <script src="assets/js/email.js"></script>
