styling for responsiveness added to instroduction and key

--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
 
 <body>
     <div class="feedback-container" id="feedbackContainer">
-        <h1>Feedback</h1>
+        <h1 class="feedback-response">Feedback</h1>
         <a href="index.html" class="main-link">Back to Main</a>
         <form id="feedbackForm" class="feedback-form" onsubmit="return sendMail(this);">
             <input type="text" name="name" id="fullname" class="form-control" placeholder="Name" required />
