--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
             <h2>Introduction</h2>
             <p><e>40 million people died in WW1 and 60 millon in WW2. Around two thirds of whom were civilians in the case
                 of the latter.</e></p>
-            <p>The two reaons another world war should never take place could simply be the two atomic bombs which were
-                detonated over Japan, however, events of recent years have shown an appetite amongst demagogues for
+            <p>The two reaons another world war should never take place should simply be given as the two atomic bombs which were
+                dropped over Japan. However, events of recent years have shown an appetite amongst demagogues for
                 conflict and the potential for global unrest seems to be nausiatingly high. Despite the consequences of
-                such bombs being detonated, some leaders of nations which possess them brandish
+                such bombs being detonated, some leaders of nations which possess them still brandish
                 them boisterously.</p>
             <div class="ww1 ww">
                 <h2>WW1</h2>
@@ -33,11 +33,11 @@
             </div>
             <p><e>6 million Jewish people were murdered in the second world war.</e></p>
             <hr>
-            <p>University students studying today are less than a third as likely to study history compared to those in the
+            <p>University students today are less than a third as likely to study history compared to those in the
                 middle of the last century. This regression in appreciation of historical events could be playing a role
                 in peoples current ideological devotions. During the creation of this website I became much more
                 sickened than I had before of the site of a
-                swastika. Incredibly, it is still graffitied on walls. I even questioned using Nazi Germanys flag, which
+                swastika. Incredibly, it is still being graffitied on walls. I even questioned using Nazi Germany's flag, which
                 includes the swastika, but felt it necessary for it to be presented in context of the evil which it
                 represents. Studying that period of history brought those events much closer to home and I hope to
                 achieve this in the people that use this website to study the wars.
@@ -66,8 +66,8 @@
                     </li>
                     <li><img src="/assets/cluster_images/mPolitical.png"> - Political/Non-Military Event</li>
                 </ul>
-                <p>Select the the time period/step size you'd like to use then drag the Airplane above the map to travel
-                    through time! </p>
+                <p>Select the the interval you'd like to use then drag the Airplane above the map to travel
+                    through time!</p>
             </div>
             <div class="ww2 ww">
                 <h2>WW2</h2>
