responsivity improved by changing the hight of pages and altering margins

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <h2>Introduction</h2>
             <p><e>40 million people died in WW1 and 60 millon in WW2. Around two thirds of whom were civilians in the case
                 of the latter.</e></p>
-            <p>The two reaons another world war should never take place should simply be given as the two atomic bombs which were
+            <p>The two reaons another world war should never take place could simply be given as the two atomic bombs which were
                 dropped over Japan. However, events of recent years have shown an appetite amongst demagogues for
                 conflict and the potential for global unrest seems to be nausiatingly high. Despite the consequences of
                 such bombs being detonated, some leaders of nations which possess them still brandish
@@ -31,16 +31,13 @@
             <div class="ww2 ww">
                 <h2>WW2</h2>
             </div>
-            <p><e>6 million Jewish people were murdered in the second world war.</e></p>
+            <hr>
+            <p><b><e>6 million Jewish people were murdered in the second world war.</e></b></p>
             <hr>
             <p>University students today are less than a third as likely to study history compared to those in the
-                middle of the last century. This regression in appreciation of historical events could be playing a role
-                in peoples current ideological devotions. During the creation of this website I became much more
-                sickened than I had before of the site of a
-                swastika. Incredibly, it is still being graffitied on walls. I even questioned using Nazi Germany's flag, which
-                includes the swastika, but felt it necessary for it to be presented in context of the evil which it
-                represents. Studying that period of history brought those events much closer to home and I hope to
-                achieve this in the people that use this website to study the wars.
+                middle of the last century. This regression in appreciation of these historical events could be playing a role
+                in peoples current ideological leanings. During the creation of this website I became much more
+                sickened than I had before by the site of a swastika. Incredibly, it is still being graffitied on walls. This led me to question using Nazi Germany's flag, which includes the swastika, but I felt it necessary for it to be presented in context of the evil which it represents. Studying that period of history brought those events much closer to home and I hope to do the same for the people that use this website to study the wars.
             </p>
             <h4>
                 Click on either globe to have a closer look at World War 1 or World War 2
