table ally and adversary adjusted to allow better responsivity, and wikipedia image added

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <div class="init-page-container">
-        <h1>Two Reasons</h1>
+        <h1><a href="index.html">Two Reasons</a></h1>
         <div id="introduction" class="intro">
             <h2>Introduction</h2>
             <p><e>40 million people died in WW1 and 60 millon in WW2. Around two thirds of whom were civilians in the case
@@ -48,7 +48,7 @@
                 <h2>WW1</h2>
             </div>
             <div class="key-table">
-                <h2>Key</h2>
+                <h2>KEY</h2>
                 <ul>
                     <li><img src="/assets/cluster_images/mGround.png"><img src="/assets/cluster_images/mww2Ground.png">
                         - Ground Warfare</li>
